--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.3",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "yargs": "^10.0.3"
   },
   "dependencies": {
     "@types/react": "^16.0.31",
